# kalmanfilter-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: automated-testing.yml
include/: Covariance.h  Filter.h  State.h
test/: CovarianceTest.cpp  FilterTest.cpp  StateTest.cpp  testMain.cpp
